force-app/main/default/objects/ClanWarAttack__c/ClanWarAttack__c.object-meta.xml
<CustomObject>
    <label>Clan War Attack</label>
    <nameField>
        <displayFormat>ATCK-{00000}</displayFormat>
        <label>Clan War Attack Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clan War Attacks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>