force-app/main/default/objects/ClanWarAttack__c/fields/AttackerTag__c.field-meta.xml
<CustomField>
    <fullName>AttackerTag__c</fullName>
    <externalId>true</externalId>
    <label>Attacker Tag</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>