force-app/main/default/objects/ClanWarAttack__c/fields/ClanWarMember__c.field-meta.xml
<CustomField>
    <fullName>ClanWarMember__c</fullName>
    <label>Clan War Member</label>
    <referenceTo>ClanWarMember__c</referenceTo>
    <relationshipLabel>Clan War Attacks</relationshipLabel>
    <relationshipName>ClanWarAttacks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>