force-app/main/default/objects/ClanWarAttack__c/fields/Defender__c.field-meta.xml
<CustomField>
    <fullName>Defender__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Defender</label>
    <referenceTo>ClanWarMember__c</referenceTo>
    <relationshipLabel>Clan War Defenses</relationshipLabel>
    <relationshipName>ClanWarDefenses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>