force-app/main/default/objects/ClanWarAttack__c/fields/DefenderTag__c.field-meta.xml
<CustomField>
    <fullName>DefenderTag__c</fullName>
    <externalId>true</externalId>
    <label>Defender Tag</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>