force-app/main/default/objects/ClanWarAttack__c/fields/DestructionPercentage__c.field-meta.xml
<CustomField>
    <fullName>DestructionPercentage__c</fullName>
    <label>Destruction Percentage</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>