force-app/main/default/objects/ClanWarAttack__c/fields/UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>UniqueKey__c</fullName>
    <description>clan war id + attacker tag + defender tag</description>
    <externalId>true</externalId>
    <label>Unique Key</label>
    <length>38</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>